[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# it seems the 0.11 version can not handle section .maps rightly.
aya = { git = "https://github.com/aya-rs/aya.git" }

anyhow = "1.0"